<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jana.karim.hw2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit">Edit</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home_phone">Home Phone</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="work_phone">Work Phone</string>
    <string name="email_address">Email Address</string>
    <string name="birthday">Birthday</string>
    <string name="_">...</string>
    <string name="display">display</string>
    <string name="birthday_">birthday...</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="homephone">homePhone</string>
    <string name="mobilephone">mobilePhone</string>
    <string name="user_add">user add</string>
    

</resources>
