<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeffffff"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/firstName"
        android:tag="@string/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        
         />
     <TextView
       
        android:id="@+id/lastName"
        android:tag="@string/lastname"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
         
         />

    <TextView
        android:id="@+id/mobilePhone"
        android:tag="@string/mobilephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
         
         
         />

</LinearLayout>
